--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".welcome.presentation.WelcomeActivity">
 
+    <ProgressBar
+        android:id="@+id/loading"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/btn_atualizar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/viewSemDados"
         android:layout_width="0dp"
@@ -45,8 +55,9 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_atualizar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
+        tools:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -64,6 +75,7 @@
                 app:srcCompat="@drawable/logo" />
 
             <LinearLayout
+                android:id="@+id/circle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/circle"
@@ -89,7 +101,7 @@
                     android:layout_marginTop="20dp"
                     android:textColor="@color/black"
                     android:gravity="center"
-                    android:text="Opa! temos \num  desperdício"/>
+                    android:text="@string/opa_temos_um_desperdicio"/>
 
 
                 <TextView
@@ -119,7 +131,7 @@
                 >
 
             </com.github.mikephil.charting.charts.BarChart>
-            
+
         </LinearLayout>
 
     </ScrollView>
