--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue_principal">#1689d8</color>
     <color name="green_principal">#6fbf01</color>
+    <color name="circle_error">#eb2c2c</color>
 </resources>
